Revision history for Perl extension {{$dist->name}}:

{{$NEXT}}
  [Enhancements]
  - Support getloadavg for DragonFly BSD.

  [Bug Fixes]
  - uptime immediately returns undef if path to `uptime` cannot be found.

  [Tests]
  - Fixed test when skipping getloadavg test.

  - Skip uptime test if uptime cannot be found.

0.22      2020-03-27 12:51:39+00:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Split getloadavg, proc_loadavg and uptime into separate functions.

  - Use File::Which to locate uptime.

  [Incompatabilities]
  - Renamed _getbsdload to getloadavg.

  [Bug Fixes]
  - Accept uptime output without commas, RT#14034.

  [Tests]
  - Fix bug testing high loads.

  - Add tests for each function.

0.21      2020-03-25 13:03:11+00:00 Europe/London
  [Bug Fixes]
  - Actually use system getloadavg for NetBSD and Solaris.

0.20      2020-03-25 12:35:33+00:00 Europe/London
  [Enhancements]
  - Add support for NetBSD #2 and Solaris.

  - Return a single undef when the load function fails.

  [Bug Fixes]
  - The return value of getloadavg is now checked, #4.

  - The load method is set up in a BEGIN block instead of import, #5.

  [Documentation]
  - Update POD about changes in version 0.12.

0.12      2020-03-24 23:22:57+00:00 Europe/London
  [Enhancements]
  - Use getloadavg system call in Linux.

  - Port changes for Cygwin from Sys::CpuLoadX.

  [Tests]
  - Show diagnostics.

0.11      2020-03-24 22:57:02+00:00 Europe/London
  [Enhancements]
  - Added support for OS/X, thanks to Vincent Lefèvre, RT#14034/GH#3.

0.10      2020-03-24 22:41:56+00:00 Europe/London
  - Maintenance taken over by Robert Rothenberg.

  [Enhancements]
  - Modernised code style.

  - The load average method is determined during module import.

  - Use XSLoader instead of DynaLoader.

  [Bug Fixes]
  - Fixed VERSION.

  - Removed unnecessary use of AutoLoader.

  [Incompatabilities]
  - Minimum version is v5.6.

  - Renamed `getbsdload` to `_getbsdload`.

  [Documentation]