@@ -4,6 +4,8 @@ Revision history for Perl extension {{$dist->name}}:
   [Enhancements]
   - Support getloadavg for DragonFly BSD.
 
+  - Change uptime to use backticks instead of piped open.
+
   [Bug Fixes]
   - uptime immediately returns undef if path to `uptime` cannot be found.
 
